--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,9 +18,9 @@ h6 {
 }
 
 @theme {
-  --color-dsp-orange: #ff863d;
-  --color-dsp-orange_medium: #fa8c45;
-  --color-dsp-orange_light: #ffe7d4;
+  --color-dsp-orange: #FF6D25;
+  --color-dsp-orange_medium: #FFB697;
+  --color-dsp-orange_light: #FEDAC7;
 }
 
 /* Chrome, Safari und Edge */
