--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,8 @@ h6 {
   --color-dsp-orange_medium: #ffb697;
   --color-dsp-orange_light: #fedac7;
   --color-dsp-white: #ffffff;
+
+  --color-dsp-orange-gradient: #fa8c45;
 }
 
 /* Chrome, Safari und Edge */
